--- a/Self-written-code/restful-web-services/src/main/resources/application.properties
+++ b/Self-written-code/restful-web-services/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+## configuring data source
 spring.datasource.url=jdbc:mysql://localhost:3306/projectdb
 spring.datasource.username=root
 spring.datasource.password=test
