--- a/Self-written-code/restful-web-services-customer/src/main/resources/application.properties
+++ b/Self-written-code/restful-web-services-customer/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+# configure data source for customer data access layer
 spring.datasource.url=jdbc:mysql://localhost:3306/customerdb
 spring.datasource.username=root
 spring.datasource.password=test
